@@ -1,5 +1,7 @@
 *SVN*
 
+* Migrations: raise if a column is duplicated.  #7345 [Jeremy McAnally, Josh Peek]
+
 * Fixtures: correctly delete and insert fixtures in a single transaction.  #8553 [Michael Schuerig]
 
 * Fixtures: people(:technomancy, :josh) returns both fixtures.  #7880 [technomancy, Josh Peek]
